Added oauth2 dependency and client properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8087
+
+spring.security.oauth2.client.registration.mywebclient.client-id=photo-app-webclient
+spring.security.oauth2.client.registration.mywebclient.client-secret=8646ef57-6e2e-4819-9e91-0a4917461725
+spring.security.oauth2.client.registration.mywebclient.scope=openid, profile, roles
+spring.security.oauth2.client.registration.mywebclient.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.mywebclient.redirect-uri=http://localhost:8087/login/oauth2/code/mywebclient
