--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 server.port=8087
 
 spring.security.oauth2.client.registration.mywebclient.client-id=photo-app-webclient
-spring.security.oauth2.client.registration.mywebclient.client-secret=8646ef57-6e2e-4819-9e91-0a4917461725
+spring.security.oauth2.client.registration.mywebclient.client-secret=2a83d59c-ee53-4fd8-a8b1-1dff6223f0d4
 spring.security.oauth2.client.registration.mywebclient.scope=openid, profile, roles
 spring.security.oauth2.client.registration.mywebclient.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.mywebclient.redirect-uri=http://localhost:8087/login/oauth2/code/mywebclient
+
+spring.security.oauth2.client.provider.mywebclient.authorization-uri=http://localhost:8080/auth/realms/appsdeveloperblog/protocol/openid-connect/auth
+spring.security.oauth2.client.provider.mywebclient.token-uri=http://localhost:8080/auth/realms/appsdeveloperblog/protocol/openid-connect/token
+spring.security.oauth2.client.provider.mywebclient.jwk-set-uri=http://localhost:8080/auth/realms/appsdeveloperblog/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.mywebclient.user-info-uri=http://localhost:8080/auth/realms/appsdeveloperblog/protocol/openid-connect/userinfo
+spring.security.oauth2.client.provider.mywebclient.user-name-attribute=preferred_username
