Updated project structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.security.oauth2.client.provider.mywebclient.token-uri=http://localhost:80
 spring.security.oauth2.client.provider.mywebclient.jwk-set-uri=http://localhost:8080/auth/realms/appsdeveloperblog/protocol/openid-connect/certs
 spring.security.oauth2.client.provider.mywebclient.user-info-uri=http://localhost:8080/auth/realms/appsdeveloperblog/protocol/openid-connect/userinfo
 spring.security.oauth2.client.provider.mywebclient.user-name-attribute=preferred_username
+eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
